navigation background color of links when hover changed to green

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -77,3 +77,7 @@ footer section div #slogan p{
     align-items: start;
     align-self: start;
 }
+.nav-link:hover{
+    background-color: darkslategray;
+    text-align: center;
+}
