--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -16,6 +16,7 @@ ul{
     /* padding-right: 100px; */
     text-align: center;
 }
+/* home nav-link */
 #home:hover {
     padding-right: 20px; 
     /* When hovered the link goes 20 px to the right.  */
